per connector and user info
